--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.2.2",
     "bootstrap": "^5.2.2",
+    "file-saver": "^2.0.5",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
